--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "appcenter": "^3.0.0",
+    "appcenter-analytics": "^3.0.0",
+    "appcenter-crashes": "^3.0.0",
     "i18n-js": "^3.3.0",
     "react": "16.9.0",
     "react-native": "0.61.2",
